2010-07-06  Darin Adler  <darin@apple.com>

        Fix crash caused by my fix to the Qt build.

        * WebCoreSupport/InspectorClientQt.cpp:
        (WebCore::InspectorFrontendClientQt::closeWindow): Release pointer into
        a local OwnPtr instead of calling clear. Another fix, probably better,
        would be to change OwnPtr::clear to zero out the pointer before deleting,
        but that affects many more call sites, so I will do that separately.

2010-07-06  Darin Adler  <darin@apple.com>

        Fix Qt build.

        * WebCoreSupport/InspectorClientQt.cpp:
        (WebCore::InspectorFrontendClientQt::closeWindow): Call clear instead of
        calling delete on the result of leakPtr.

2010-06-19  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Yury Semikhatsky.

        WebInspector: js function name was fixed.
        dispatchMessageToFrontend -> dispatchMessageFromBackend.
        https://bugs.webkit.org/show_bug.cgi?id=40675

        * WebCoreSupport/InspectorClientQt.cpp:
        (WebCore::InspectorClientQt::sendMessageToFrontend):

2010-07-03  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Return usable property names from DRT's computedStyleIncludingVisitedInfo()

        Object property names such as 'background-color' need to be returned in camel
        case, i.e. backgroundColor so that JS can reference them. Add support for this
        to DumpRenderTreeSupportQt.

        https://bugs.webkit.org/show_bug.cgi?id=40445

        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (convertToPropertyName):
        (DumpRenderTreeSupportQt::computedStyleIncludingVisitedInfo):

2010-07-01  Robert Hogan <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] dump frames in ascending alphabetical order of title

        https://bugs.webkit.org/show_bug.cgi?id=41261

        Unskip:
        http/tests/navigation/metaredirect-frames.html